--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer {
     text-align: center;
-    padding: 1%;
+    padding: 1% 0 1% 0;
     background-color: #efefef;
     box-shadow: 1px 1px 8px 1px rgb(34, 34, 34);
     color: #066a75;
