--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,119 +1,120 @@
-* {
-    box-sizing: border-box;
+nav{
+  background: #ffffff;
+  height: 80px;
+  width: 100%;
+  box-shadow: 1px 1px 8px 1px rgb(34, 34, 34);
+}
+label.logo{
+  color: #066a75;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  color: black;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+a.active,a:hover{
+  transition: .5s;
+  color: #066a75;
+}
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+@media (max-width: 952px){
+  label.logo{
+    font-size: 30px;
+    padding-left: 50px;
   }
-  
-  body {
-    margin: 0px;
-    font-family: 'segoe ui';
-    height: 100%;
+  nav ul li a{
+    font-size: 16px;
   }
-  
-  .nav {
-    height: 50px;
+  .dp-menu ul li ul {
+    display: block;
+  }  
+}
+
+@media (max-width: 858px){
+  .checkbtn{
+    display: block;
+  }
+  ul{
+    position: fixed;
     width: 100%;
-    background-color: #efefef;
-    box-shadow: 1px 1px 8px 1px rgb(34, 34, 34);
-    position: relative;
-   
-  }
-  
-  .nav > .nav-header {
-    display: inline;
-  }
-  
-  .nav > .nav-header > .nav-title {
-    display: inline-block;
-    font-size: 22px;
-    color: #066a75;
-    padding: 10px 10px 10px 10px;
-    margin: 0 0 0 5%;
-  }
-  
-  .nav > .nav-btn {
-    display: none;
-  }
-  
-  .nav > .nav-links {
-    display: inline;
-    float: right;
-    font-size: 18px;
-    margin-right: 3%;
-  }
-  
-  .nav > .nav-links > a {
-    display: inline-block;
-    padding: 13px 10px 13px 10px;
-    text-decoration: none;
-    color: black;
-    
-  }
-  
-  .nav > .nav-links > a:hover {
-    background-color: #49bac7;
-  }
-  
-  .nav >  a:hover {
-    background-color: #fff;
-  }
-  
-  .nav > #nav-check {
-    display: none;
-  }
-  .botao {
-    border: none;
-    background-color:#066a75;
-    padding: 1%;
+    height: 100vh;
+    background: rgb(199, 197, 197);;
+    top: 80px;
+    left: -100%;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    cursor: pointer;
-    border-radius: 3%;
-    
+    transition: all .5s;
   }
+  nav ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  nav ul li a{
+    font-size: 20px;
+  }
+  a:hover,a.active{
+    background: none;
+    color: #066a75;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+  .dp-menu ul li ul {
+    display: block;
+  }  
+}
+/*sub menu*/
+.dp-menu ul ul {
+  display: none;
+  right: 0;
+  position: absolute;
+  background-color: white;
+  text-align: center;
+  line-height: 40px;
+}
+
+.dp-menu ul li:hover ul {
+  display: block;
   
-  @media (max-width:600px) {
-    .nav > .nav-btn {
-      display: inline-block;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-    }
-    .nav > .nav-btn > label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 13px;
-    }
-    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-      background-color: #066a75;
-    }
-    .nav > .nav-btn > label > span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 2px solid rgb(5, 5, 5);
-    }
-    .nav > .nav-links {
-      position: absolute;
-      display: block;
-      width: 100%;
-      background-color: rgb(255, 255, 255);
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow-y: hidden;
-      top: 50px;
-      left: 0px;
-    }
-    .nav > .nav-links > a {
-      display: block;
-      width: 100%;
-    }
-    .nav > #nav-check:not(:checked) ~ .nav-links {
-      height: 0px;
-    }
-    .nav > #nav-check:checked ~ .nav-links {
-      height: calc(100vh - 50px);
-      overflow-y: auto;
-    }
-  }
+}
+
+.dp-menu ul ul {
+  width: 15%;
+  height: auto;
+}
+.dp-menu ul ul li #sm:hover{
+  color: white;
+  background-color: #066a75;
+}
+
+.dp-menu ul ul li a {
+  display: grid;
+  font-size:12px;
+  line-height: 40px;
+}
