--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@ footer {
     background-color: #efefef;
     box-shadow: 1px 1px 8px 1px rgb(34, 34, 34);
     color: #066a75;
-    position:absolute;
+    position:fixed;
     bottom:0;
     width: 100%;
 }
