Criando tela de exibição de vaga

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 @import "../assets/css/telaLoginCadastro.css";
 @import "../assets/css/navbar.css";
 @import "../assets/css/footer.css";
-@import "../assets/css/perfil.css";
+@import "../assets/css/telaperfil.css";
 @import "../assets/css/card.css";
+@import "../assets/css/exibir_vagas.css";
