--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -74,7 +74,7 @@ a.active,a:hover{
   .checkbtn{
     display: block;
   }
-  ul{
+  .dp-menu ul{
     position: fixed;
     width: 100%;
     height: 100vh;
