--- a/assets/css/telaperfil.css
+++ b/assets/css/telaperfil.css
@@ -1,3 +1,45 @@
-xh1{
-    color:re;
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid transparent;
+    border-radius: .25rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
+}
+.me-2 {
+    margin-right: .5rem!important;
+}
+.mainPerfil{
+    width: 100%;
+    margin-top:5%;
+}
+
+.mainPerfil b{
+    text-decoration: none;
+}
+
+.card-body #cargo{
+    font-size:16px;
+}
+
+.card-body #ano{
+    font-size:12px;
+    color: #066a75;
+}
+
+.card-body #descargo{
+    font-size:14px;
+}
+
+.card-body #ft{
+    width:6%;
+}
+
+.card-body li a{
+    text-decoration: none;
 }
